--- a/src/layouts/styles.css
+++ b/src/layouts/styles.css
@@ -70,6 +70,7 @@ body {
   border: 20px solid #2222ff;
   font-size: 16px;
   line-height: 1.7;
+  min-height: 100vh;
 }
 
 button, input, textarea {
