--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -11,12 +11,12 @@
 body,
 button,
 input,
-textarea {
+textarea,
+a {
   font-family: "Chakra Petch", "system", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
-  line-height: 1.7;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -31,8 +31,6 @@ strong {
 
 a {
   text-decoration: none;
-  font-weight: 400;
-  color: #2222ff;
 }
 
 .anchor-link {
@@ -46,6 +44,10 @@ body {
   border: 20px solid #2222ff;
   min-height: 100vh;
   overflow-x: hidden;
+}
+
+p {
+  line-height: 1.5;
 }
 
 h1, h2, h3, h4 {
