--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -41,7 +41,9 @@ a {
 }
 
 body {
-  border: 20px solid #2222ff;
+  border-style: solid;
+  border-width: 20px 20px 0;
+  border-color: #2222ff;
   min-height: 100vh;
   overflow-x: hidden;
 }
