--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -11,8 +11,7 @@
 body,
 button,
 input,
-textarea,
-a {
+textarea {
   font-family: "Chakra Petch", "system", sans-serif;
   font-weight: 400;
   font-style: normal;
