Make passepartout fixed

--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Chakra+Petch:400,700|Roboto:400,700');
+@import url("https://fonts.googleapis.com/css?family=Chakra+Petch:400,700|Roboto:400,700");
 
 /* Define the "system" font family */
 @font-face {
   font-family: system;
   font-style: normal;
   font-weight: 300;
-  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
+  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"),
+    local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"),
+    local("Roboto-Light"), local("DroidSans"), local("Tahoma");
 }
 
 body,
@@ -47,11 +49,20 @@ body {
   overflow-x: hidden;
 }
 
+@media (min-width: 992px) {
+  body {
+    border-width: 0 20px 0;
+  }
+}
+
 p {
   line-height: 1.5;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-weight: 700;
 }
 
