--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Chakra+Petch:400,700|Roboto:400,700");
+@import url("https://fonts.googleapis.com/css?family=Chakra+Petch:400,700");
 
 /* Define the "system" font family */
 @font-face {
   font-family: system;
+  font-display: auto;
   font-style: normal;
   font-weight: 300;
   src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"),
@@ -14,7 +15,7 @@ body,
 button,
 input,
 textarea {
-  font-family: "Chakra Petch", "system", sans-serif;
+  font-family: "Chakra Petch", system, sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
